--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ python:
   # Python 3
   - "3.5"
   - "3.6"
-  - "3.7"
-  - "3.8-dev"
+  - "3.7-dev"
+  # - "3.7"
+  # - "3.8-dev"
 install:
   - pip install -r requirements.txt
 script:
